# Finish_Him

./: .gitignore  LICENSE  README.md  docker-compose.yaml  pyproject.toml
Application/: main.py
ArtificialIntelegence/CorrectionModel/: CorrectModel.py
ArtificialIntelegence/RSVbaseline/correction/: config.py  test.py  train.py
ArtificialIntelegence/RSVbaseline/correction/data/: my_dataloader.py
ArtificialIntelegence/RSVbaseline/correction/models/: constantBias.py  loss.py
ArtificialIntelegence/RSVbaseline/experiments/: dataset_to_numpy.py
ArtificialIntelegence/RSVbaseline/experiments/constantBaseline/: main.py  test.py
ArtificialIntelegence/RSVbaseline/experiments/constantBaseline/CorrectionModel/: CorrectModel.py
ArtificialIntelegence/RSVbaseline/experiments/constantBaseline/correction/: config.py  test.py  train.py
ArtificialIntelegence/RSVbaseline/experiments/constantBaseline/correction/data/: my_dataloader.py
ArtificialIntelegence/RSVbaseline/experiments/scaler/: main.py
Connector/: unpacker.py
Frontend/: Dockerfile
SQLDatabase/data/: postmaster.pid
SQLDatabase/data/global/: pg_control
Services/: numpy_exctractor.py  unpacker.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: Drop.vue  Text-img.vue
frontend/src/router/: index.js
frontend/src/views/: AboutView.vue  HomeView.vue
grafana_data/: grafana.db
nginx/: Dockerfile  nginx.conf
