[tool.poetry]
name = "legendarytemplateallofrussia"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
prometheus-fastapi-instrumentator = "^6.1.0"
gunicorn = {extras = ["standart"], version = "^21.2.0"}
uvicorn = "^0.24.0.post1"
prometheus-client = "^0.18.0"
cffi = "^1.16.0"
pymongo = "^4.6.0"
python-multipart = "^0.0.6"
rarfile = "^4.1"
opencv-python = "^4.8.1.78"
pendulum = "^2.1.2"
xarray = "^2023.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
